transform NodeMatcher in a opaque generic container